Mods to I2 report

--- a/SnowmassStyle/CpF-I2/wgreport.tex
+++ b/SnowmassStyle/CpF-I2/wgreport.tex
@@ -252,9 +252,9 @@ There are a number of examples of the latter model at NERSC, where the Berkeley 
 
 \subsection{HPC Center Growth Rates and Plans}
  
-As shown in Figure \ref{fig:NERSC-Computational-Hours} above the projected need for HEP production computing within DOE will outpace even the traditional Moore’s Law increase of approximately 2X per year.  The red line in the plot connects the stated requirements with 2012 usage and shows that just the traditional HPC HEP computing community has needs that far exceed the traditional trend lines. Much of this is driven by the need for simulations to support interpretation of data being collected from the LHC and cosmological sky surveys. Additional computing is needed for accelerator research and design.
+As shown in Figure \ref{fig:NERSC-Computational-Hours} above the projected need for HEP production computing within DOE will outpace even the traditional Moore's Law increase of approximately 2X per year.  The red line in the plot connects the stated requirements with 2012 usage and shows that just the traditional HPC HEP computing community has needs that far exceed the traditional trend lines. Much of this is driven by the need for simulations to support interpretation of data being collected from the LHC and cosmological sky surveys. \textcolor{red}{I thought that a lot of what is driving this is lattice QCD, which is not what is limiting LHC interpretation -- we're in the perturbative world.  Intensity frontier, maybe so.}  Additional computing is needed for accelerator research and design.
  
-This pressing need for resources comes at a time of uncertain budgetary forecasts. The DOE exascale initiative targets enabling an exascale compute system by 2022-2023 – with the actual timeframe dependent on funding and technology advances – through the Fast Forward (processor design) and Design Forward (system design) partnerships with HPC vendors. The Exascale Initiative includes partnerships with government, the computer industry, DOE laboratories, and academia.  Goals include
+This pressing need for resources comes at a time of uncertain budgetary forecasts. The DOE exascale initiative targets enabling an exascale compute system by 2022-2023 -- with the actual timeframe dependent on funding and technology advances -- through the Fast Forward (processor design) and Design Forward (system design) partnerships with HPC vendors. The Exascale Initiative includes partnerships with government, the computer industry, DOE laboratories, and academia.  Goals include
 \begin{itemize}
 \item{1,000 times more performance than a Petaflop system}
 \item{Capability to execute 1 billion degrees of concurrency}
@@ -266,7 +266,7 @@ This pressing need for resources comes at a time of uncertain budgetary forecast
 [insert discussion/plot of NSF and DOE LCF capabilities and plans. LCF futures? LCF resources are not programmatic production cycles with guaranteed access. Even less good fit than NERSC.]
  
  
-While the past focus on HPC centers has largely been on massive parallel computations, the need for, and ability to facilitate handling of, accompanying data has quietly grown over the years. The plot below shows that archival data at NERSC has grown consistently at about 1.7X per year. Figure XXX shows the historical growth in data stored at NERSC’s archival storage systems and extrapolation of that trend. The findings from the NERSC HEP requirements reviews show a sharp increase above the trend line starting in 2013-2014 through 2017. This largely reflects a need to support simulated and experimental data from sky surveys, including LSST and Cosmic Background Radiation satellite missions, as well a growing need to centrally store and analyze experimental data from satellites and accelerators.
+While the past focus on HPC centers has largely been on massive parallel computations, the need for, and ability to facilitate handling of, accompanying data has quietly grown over the years. The plot below shows that archival data at NERSC has grown consistently at about 1.7X per year. Figure~\ref{fig:NERSC-HPSS} shows the historical growth in data stored at NERSC's archival storage systems and extrapolation of that trend. The findings from the NERSC HEP requirements reviews show a sharp increase above the trend line starting in 2013-2014 through 2017. This largely reflects a need to support simulated and experimental data from sky surveys, including LSST and Cosmic Background Radiation satellite missions, as well a growing need to centrally store and analyze experimental data from satellites and accelerators.
 
 \begin{figure}[h]
 \includegraphics[width=\textwidth]{CpF-I2/images/2013-NERSC-HPSS-Usage.png}
@@ -283,16 +283,29 @@ Larger experiments, like those at the LHC, do have the resources to make full us
 
 As the quest for computing resources takes researchers away from their current “natural” computing homes of distributed HTC on the grid and HPC at specialized shared facilities, it will become more important for users to be able to move between the different computing paradigms easily.  The ability to make seamless transitions will rely on work that is both technical, such as creating uniform systems of identity management and job submission, and political, such as coordinating between entities such as the OSG, XSEDE, and national centers such as NERSC.  It would be useful for the leaders of those organizations to discuss how they could start to build a computing infrastructure that can truly serve all the members of the HEP community.
 
-We are at a critical time for HPC computing. To continue the historic, Moore’s Law-like, growth in HPC computing power, the HPC community must adapt to build (with HPC vendors) and use new energy-efficient technologies. The path forward will require use of low-power, simple fundamental processing units. The current leading architectural candidates are systems that incorporate NVIDIA GPUs (Graphical Processing Units), the Intel Phi “many-core” processor, processors based on AMD’s APU technology, and units integrating ARM-based processors.
+We are at a critical time for HPC computing. To continue the historic, Moore's Law-like, growth in HPC computing power, the HPC community must adapt to build (with HPC vendors) and use new energy-efficient technologies. The path forward will require use of low-power, simple fundamental processing units. The current leading architectural candidates are systems that incorporate NVIDIA GPUs (Graphical Processing Units), the Intel Phi “many-core” processor, processors based on AMD's APU technology, and units integrating ARM-based processors.
  
 In addition to engineering and technology advancements needed to actually build  energy-efficient, performant processors and system, application development on these new architectures poses a serious challenge. The programming strategy, in practice since the late 1990s, of optimizing code to minimize CPU cycles and inter-node communication must be replaced with a paradigm that stresses minimizing data movement at all levels (from on-chip cache, to on-node shared memory, to storage media) and maximizing SIMD (vector) processing operating on contiguous data, and use of light-weight threads of execution. Virtually all HPC software will have to be modified significantly or rewritten to execute acceptably well (or at all in some cases) on these architectures. Programming models for their architectures are nascent and/or proprietary to a particular vendor’s architecture. Some science communities have embraced one technology or another, while others are waiting to see which programming model and/or language “wins out.” In either case, a significant investment in code development will be required.
  
 This issue also applies to HTC applications, like those that currently use the WLCG. Although traditional multi-core processors and systems will continue to exist for some time, the growth in computing power will come from “many-core”
-processors. If the HEP community does not adapt codes to run in parallel (using fine-grained parallelism [ e.g. GPUs] and possibly coarse-grained parallelism [e.g. MPI]) it will be precluding itself from using a vast source of computational power in a time of greater need.
+processors. If the HEP community does not adapt codes to run in parallel (using fine-grained parallelism ({\it e.g.} GPUs) and possibly coarse-grained parallelism ({\it e.g.} MPI)) it will be precluding itself from using a vast source of computational power in a time of greater need.
  
-[Coordination: software infrastructure and identify management] Anything else?
-ection{Summary}
+\section{Summary}
 \label{sec:comp-summary}
+Powerful distributed computing and robust facility infrastructures are essential to the continued progress of particle physics across all of its defined frontiers of experimental approaches.  Those approaches, and the theoretical work needed to support them, require a combination of both HTC and HPC systems.  The dominant consumers of HTC are the LHC experiments, who have been well served by it and should be in the future also.  Most intensity-frontier experiments can be supported by HTC also.  HPC is needed for applications such as lattice QCD, accelerator design and R\&D, data analysis and synthetic maps, N-body and hydro-cosmology simulations, supernova modeling, and more recently perturbative QCD.
+
+As long as certain conditions are in place and specific steps are taken to keep up with evolving technologies, there ought to be adequate resources to support energy-frontier experiments.  This requires near-constant funding of the WLCG, greater efficiencies in resource usage, and the evolution of software to take advantage of multicore processor architectures.  These experiments should also pursue and take advantage of opportunistic resources, be they in commercial clouds (which are not currently viable as purchased resources), universities, DOE centers or elsewhere.  The experiments would also benefit from further engagement with national HPC centers, which have resources available to HEP experiments and can support efforts to make use of HPC systems that have not traditionally been used for HTC applications.
+
+Intensity-frontier experiments have smaller computing needs in comparison, and there is nothing technically that prevents them from being met.  Such experiments should be aware of the existence of resources available to them through the OSG or at national computing centers, and they could benefit from a coordinated effort amongst them to gain access to resources and share software and training.
+
+Cosmic-frontier experiments and the simulations needed to interpret them are among the drivers of a need for growth in HPC resources in the coming years, along with lattice QCD and accelerator design.  Indeed, demand for access to HPC across HEP is expected to exceed the expected availability.  Such computations is critically needed to interpret results from a number of important experiments and realize scientific returns from national investments in those experiments.  The NERSC report on HEP computing needs indicates a shortage of HPC resources needed for HEP by a factor of four by 2017.  While funding and technology development needed to sustain traditional HPC growth rates are uncertain, they must be maintained to support HEP science.
+
+Distributed computing infrastructures, which have been critical to the success of the LHC experiments, should continue to be able to serve these and other applications even as they grow in scale.  There are no show-stoppers seen in increasing scale, but various developments should be purused to improve efficiency and ease of use.  Keeping sufficient staff support at a reasonable cost is a continuing concern; finding operational efficiencies could help address this.  Given that HEP is the largest user of distributed scientific computing, currently in the form of grid computing, members of the field must continue to take a leadership role in its development.
+
+National centers play an important role in some aspects of computing, and HEP might be able to take advantage of an expanded role.  It is already used in many of the applications listed above.  While there are not enough resources available at the centers to rival those of the WLCG, experiments should explore the use of the centers as part of their efforts to diversify their computing architectures.  These centers do have access to large, state-of-the-art resources, operational support and expertise in many areas of computing.
+
+We expect that distributed computing and facility infrastructures will continue to play a vital role in enabling discovery science.
+
 
 \begin{thebibliography}{99}
 \bibitem{bib:CHEPresources} See for instance G.~Bagliesi {\it et al.}, ``CMS resource utilization and limitations on the grid after the first two years of LHC collisions'', CHEP 2012 proceedings, {\tt http://dx.doi.org/10.1088/1742-6596/396/3/032012}.
