Latest revisions for CpF-T3 (lattice field theory).

--- a/SnowmassStyle/CpF-T3/authorlist.tex
+++ b/SnowmassStyle/CpF-T3/authorlist.tex
@@ -4,7 +4,8 @@
 
 \begin{center}
 
-\begin{large} {\bf Conveners: T. Blum, D. Holmgren, R. S. Van de Water} \end{large}
+\begin{large} {\bf Conveners: T. Blum, R. S. Van de Water} \end{large}
+\begin{large} {\bf Observer: D. Holmgren} \end{large}
 
 R.~Brower,
 S.~Catterall,
@@ -13,8 +14,8 @@ A.~Kronfeld,
 J.~Kuti,
 P.~Mackenzie,
 E.~T.~Neil,
-S.~R.~Sharpe
-\ldots
+S.~R.~Sharpe,
+R.~Sugar
 
 \end{center}
 
